MDEV-4724 Some temporal functions do not preserve microseconds